@@ -1,7 +1,7 @@
 package com.cappleapple.astralrepository.gametest;
 import com.cappleapple.astralrepository.client.*;
 import net.minecraft.world.item.*;
-import net.neoforged.fml.ModList;
+import net.minecraftforge.fml.ModList;
 public final class RecipeViewerDropSmoke {
     public static void rune(RuneSettingsScreen s){
         if(ModList.get().isLoaded("emi"))Emi.rune(s);
@@ -19,13 +19,13 @@ public final class RecipeViewerDropSmoke {
     private static class Jei {
         static void rune(RuneSettingsScreen s){
             if(!com.cappleapple.astralrepository.compat.AstralJeiPlugin.registered)throw new AssertionError("JEI plugin was not registered");
-            var fluid=new net.neoforged.neoforge.fluids.FluidStack(net.minecraft.world.level.material.Fluids.LAVA,1000);
-            var typed=new mezz.jei.api.ingredients.ITypedIngredient<net.neoforged.neoforge.fluids.FluidStack>(){
-                public mezz.jei.api.ingredients.IIngredientType<net.neoforged.neoforge.fluids.FluidStack> getType(){return mezz.jei.api.neoforge.NeoForgeTypes.FLUID_STACK;}
-                public net.neoforged.neoforge.fluids.FluidStack getIngredient(){return fluid;}
+            var fluid=new net.minecraftforge.fluids.FluidStack(net.minecraft.world.level.material.Fluids.LAVA,1000);
+            var typed=new mezz.jei.api.ingredients.ITypedIngredient<net.minecraftforge.fluids.FluidStack>(){
+                public mezz.jei.api.ingredients.IIngredientType<net.minecraftforge.fluids.FluidStack> getType(){return mezz.jei.api.neoforge.NeoForgeTypes.FLUID_STACK;}
+                public net.minecraftforge.fluids.FluidStack getIngredient(){return fluid;}
             };
             var targets=new com.cappleapple.astralrepository.compat.AstralJeiPlugin.Handler<RuneSettingsScreen>().getTargetsTyped(s,typed,true);
-            if(targets.isEmpty())throw new AssertionError("JEI has no fluid ghost target");targets.getFirst().accept(fluid);
+            if(targets.isEmpty())throw new AssertionError("JEI has no fluid ghost target");targets.get(0).accept(fluid);
         }
         static void tome(RecipeTomeScreen s){
             var item=new ItemStack(Items.CHEST);
@@ -33,7 +33,7 @@ public final class RecipeViewerDropSmoke {
                 public mezz.jei.api.ingredients.IIngredientType<ItemStack> getType(){return mezz.jei.api.constants.VanillaTypes.ITEM_STACK;}
                 public ItemStack getIngredient(){return item;}
             };
-            new com.cappleapple.astralrepository.compat.AstralJeiPlugin.Handler<RecipeTomeScreen>().getTargetsTyped(s,typed,true).getFirst().accept(item);
+            new com.cappleapple.astralrepository.compat.AstralJeiPlugin.Handler<RecipeTomeScreen>().getTargetsTyped(s,typed,true).get(0).accept(item);
         }
     }
 }
