@@ -19,7 +19,7 @@ public final class StorageCrystalClientSmoke {
     public static boolean tick()throws Exception{
         var mc=Minecraft.getInstance();if(failure!=null)throw new AssertionError(failure);if(++ticks>600)throw new AssertionError("Crystal menu timeout "+phase);
         if(phase==0){phase=1;mc.getSingleplayerServer().execute(()->{try{
-            var p=mc.getSingleplayerServer().getPlayerList().getPlayers().getFirst();var level=p.serverLevel();p.closeContainer();level.getChunkAt(CRYSTAL);
+            var p=mc.getSingleplayerServer().getPlayerList().getPlayers().get(0);var level=p.serverLevel();p.closeContainer();level.getChunkAt(CRYSTAL);
             level.setBlockAndUpdate(CRYSTAL,AstralContent.SEED_STORAGE_CRYSTAL.get().defaultBlockState());level.setBlockAndUpdate(NEXUS,AstralContent.STORAGE_NEXUS.get().defaultBlockState());level.setBlockAndUpdate(STORE,Blocks.CHEST.defaultBlockState());
             ((CrystalNodeBlockEntity)level.getBlockEntity(CRYSTAL)).setChannel(6);((CrystalNodeBlockEntity)level.getBlockEntity(NEXUS)).setChannel(6);
             ((CrystalNodeBlockEntity)level.getBlockEntity(CRYSTAL)).inventory().insertItem(0,new ItemStack(Items.AMETHYST_SHARD,23),false);
@@ -27,7 +27,7 @@ public final class StorageCrystalClientSmoke {
         }catch(Throwable e){failure=e.toString();}});}
         else if(phase==1&&ready&&ticks>80){open(CRYSTAL);phase=2;ticks=0;}
         else if(phase==2&&ticks>20&&mc.screen instanceof NexusScreen screen){
-            check(screen.getMenu().entries.size()==1&&screen.getMenu().entries.getFirst().stack().is(Items.AMETHYST_SHARD)&&screen.getMenu().entries.getFirst().count()==23,"Crystal received foreign network items");
+            check(screen.getMenu().entries.size()==1&&screen.getMenu().entries.get(0).stack().is(Items.AMETHYST_SHARD)&&screen.getMenu().entries.get(0).count()==23,"Crystal received foreign network items");
             check(screen.getTitle().getString().equals(AstralContent.SEED_STORAGE_CRYSTAL.get().getName().getString()),"Crystal title is mislabeled");
             check(screen.getMenu().jobs.isEmpty(),"Crystal shows network crafting jobs");shot("storage_crystal_local.png");open(NEXUS);phase=3;ticks=0;
         }
@@ -37,7 +37,7 @@ public final class StorageCrystalClientSmoke {
         }
         return false;
     }
-    private static void open(BlockPos pos){var mc=Minecraft.getInstance();mc.getSingleplayerServer().execute(()->{try{var p=mc.getSingleplayerServer().getPlayerList().getPlayers().getFirst();NetworkManager.open(p,GlobalPos.of(p.level().dimension(),pos));}catch(Throwable e){failure=e.toString();}});}
+    private static void open(BlockPos pos){var mc=Minecraft.getInstance();mc.getSingleplayerServer().execute(()->{try{var p=mc.getSingleplayerServer().getPlayerList().getPlayers().get(0);NetworkManager.open(p,GlobalPos.of(p.level().dimension(),pos));}catch(Throwable e){failure=e.toString();}});}
     private static void shot(String name)throws Exception{try(var image=net.minecraft.client.Screenshot.takeScreenshot(Minecraft.getInstance().getMainRenderTarget())){image.writeToFile(Path.of("../build/client-smoke/"+name));}}
     private static void check(boolean value,String message){if(!value)throw new AssertionError(message);}
 }
