@@ -5,24 +5,24 @@ import com.cappleapple.astralrepository.content.*;
 import java.util.*;
 import java.util.function.Consumer;
 import net.minecraft.core.*;
-import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.StreamCodec;
-import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
+import net.minecraft.network.FriendlyByteBuf;
+import com.cappleapple.astralrepository.platform.StreamCodec;
+import com.cappleapple.astralrepository.platform.CustomPacketPayload;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.phys.*;
-import net.neoforged.neoforge.capabilities.Capabilities;
-import net.neoforged.neoforge.network.PacketDistributor;
-import net.neoforged.neoforge.network.registration.PayloadRegistrar;
+import com.cappleapple.astralrepository.platform.capabilities.Capabilities;
+import com.cappleapple.astralrepository.platform.network.PacketDistributor;
+import com.cappleapple.astralrepository.platform.network.registration.PayloadRegistrar;
 
 /** Only the selected hotbar wand receives route previews; unchanged geometry is refreshed once per second. */
 public final class BindingPreviewPackets {
     public record Preview(UUID rune,int color,List<NetworkPackets.Visual> paths,Vec3 particleOrigin,Direction particleFace) implements CustomPacketPayload {
-        public static final Type<Preview> TYPE=new Type<>(ResourceLocation.fromNamespaceAndPath("astral_repository","binding_preview"));
+        public static final Type<Preview> TYPE=new Type<>(new ResourceLocation("astral_repository","binding_preview"));
         public static final Preview EMPTY=new Preview(null,0,List.of(),null,null);
         public Preview{if((particleOrigin==null)!=(particleFace==null)||particleOrigin!=null&&!Double.isFinite(particleOrigin.lengthSqr()))throw new IllegalArgumentException("Invalid particle source");paths=List.copyOf(paths);if(paths.size()>RuneLayer.MAX_TARGETS+1)throw new IllegalArgumentException("Too many binding paths");}
-        public static final StreamCodec<RegistryFriendlyByteBuf,Preview> CODEC=StreamCodec.of((b,p)->{
+        public static final StreamCodec<FriendlyByteBuf,Preview> CODEC=StreamCodec.of((b,p)->{
             b.writeBoolean(p.rune!=null);if(p.rune!=null)b.writeUUID(p.rune);b.writeInt(p.color);b.writeVarInt(p.paths.size());for(var path:p.paths)NetworkPackets.Visual.CODEC.encode(b,path);b.writeBoolean(p.particleOrigin!=null);if(p.particleOrigin!=null){b.writeDouble(p.particleOrigin.x);b.writeDouble(p.particleOrigin.y);b.writeDouble(p.particleOrigin.z);b.writeEnum(p.particleFace);}
         },b->{UUID rune=b.readBoolean()?b.readUUID():null;int color=b.readInt(),count=b.readVarInt();if(count<0||count>RuneLayer.MAX_TARGETS+1)throw new IllegalArgumentException("Too many binding paths");List<NetworkPackets.Visual> paths=new ArrayList<>();for(int i=0;i<count;i++)paths.add(NetworkPackets.Visual.CODEC.decode(b));Vec3 origin=null;Direction face=null;if(b.readBoolean()){origin=new Vec3(b.readDouble(),b.readDouble(),b.readDouble());face=b.readEnum(Direction.class);}return new Preview(rune,color,paths,origin,face);});
         public Type<Preview> type(){return TYPE;}
@@ -41,10 +41,10 @@ public final class BindingPreviewPackets {
         var surface=RuneSurfaces.get(player.serverLevel(),pos.pos(),selection.address().face());var rune=surface==null?null:surface.get(selection.layer());if(rune==null)return Preview.EMPTY;
         int color=rune.design().averageColor(AstralServerConfig.runeResolution.get());List<NetworkPackets.Visual> paths=new ArrayList<>();
         for(var target:rune.targets()){var path=route(player,rune,target,color);if(path!=null)paths.add(path);}
-        var eye=player.getEyePosition();var look=player.calculateViewVector(player.getXRot(),player.getYRot());
+        var eye=player.getEyePosition();var look=player.getViewVector(1);
         double reach=AstralServerConfig.wandBindingRange.get();
         for(double distance=0;distance<=reach;distance+=.5)if(!player.serverLevel().hasChunkAt(BlockPos.containing(eye.add(look.scale(distance))))){reach=Math.max(0,distance-.5);break;}
-        var hit=player.level().clip(new net.minecraft.world.level.ClipContext(eye,eye.add(look.scale(reach)),net.minecraft.world.level.ClipContext.Block.OUTLINE,net.minecraft.world.level.ClipContext.Fluid.NONE,player));
+        HitResult hit=player.level().clip(new net.minecraft.world.level.ClipContext(eye,eye.add(look.scale(reach)),net.minecraft.world.level.ClipContext.Block.OUTLINE,net.minecraft.world.level.ClipContext.Fluid.NONE,player));
         if(hit instanceof BlockHitResult block&&hit.getType()==HitResult.Type.BLOCK&&player.serverLevel().hasChunkAt(block.getBlockPos())&&!pos.pos().equals(block.getBlockPos())){
             boolean crystal=player.level().getBlockEntity(block.getBlockPos()) instanceof CrystalNodeBlockEntity;
             if(crystal||RuneProgramming.isContainer(player.serverLevel(),block.getBlockPos(),block.getDirection())){
@@ -60,7 +60,7 @@ public final class BindingPreviewPackets {
         if(route.size()<2)return null;
         var positions=route.stream().map(GlobalPos::pos).toList();
         var arrival=target.face()==null?null:new TransferVisuals.Endpoint(Vec3.atLowerCornerOf(target.face().getNormal()).scale(.501),target.face());
-        return new NetworkPackets.Visual(positions.getFirst(),positions.getLast(),ItemStack.EMPTY,color,TransferVisuals.duration(positions),-1,positions,TransferVisuals.rune(rune),arrival);
+        return new NetworkPackets.Visual(positions.get(0),positions.get(positions.size()-1),ItemStack.EMPTY,color,TransferVisuals.duration(positions),-1,positions,TransferVisuals.rune(rune),arrival);
     }
     private BindingPreviewPackets(){}
 }
